--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "homepage": "https://github.com/debiabril/epicaProyecto#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
-    "sequelize": "^6.33.0"
+    "mysql2": "^3.6.1",
+    "sequelize": "^6.33.0" 
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
