--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.1",
-    "sequelize": "^6.33.0",
-    "serve-favicon": "^2.5.0"
+    "sequelize": "^6.33.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
